@@ -1,5 +1,12 @@
 2003-07-17  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
+	* generic/tkPanedWindow.c (PanedWindowReqProc): Fix from Eric
+	Boudaillier so panedwindows get their geometry right even when
+	their children don't know their size initially. [Bug 738143]
+	* doc/panedwindow.n: Removed sentences about the use of [update
+	idletasks] with this command, as that is no longer necessary with
+	the fix from Bug 738143. [Bug 747814]
+
 	* generic/tkImgPhoto.c (ImgPhotoCmd): Rewrote subcommand processing
 	to never jump to the end of the switch.  I find that confusing as
 	I can't see whether there's processing still to be done from a
